--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
                     <button>Join Sekarang</button>
                 </div>
             </div>
+
+            <!-- Hamburger button -->
+            <div class="toggle-btn">
+                <button class="hamburger" onclick="burger(this)">
+                    <div class="bar1"></div>
+                    <div class="bar2"></div>
+                    <div class="bar3"></div>
+                </button>
+            </div>
         </nav>
     </header>
 
@@ -442,7 +451,7 @@
                         </div>
                     </div>
 
-                    <div>
+                    <div class="map">
                         <img src="/assets/image/Map.svg" alt="Map image">
                     </div>
                 </div>
@@ -453,11 +462,11 @@
                             <div class="wrapper-1">
                                 <div class="input">
                                     <label for="name">Nama Anda :</label>
-                                    <input type="text" id="name" placeholder="Nama Anda" required>
+                                    <input type="text" id="name" placeholder="Nama Anda" autocomplete="username" required>
                                 </div>
                                 <div class="input">
                                     <label for="e-mail">E-Mail Anda :</label>
-                                    <input type="email" placeholder="emailanda@gamil.com" required>
+                                    <input type="email" id="e-mail" placeholder="emailanda@gamil.com" autocomplete="email" required>
                                 </div>
                             </div>
 
