--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                 </div>
                 <div class="card-plan-wrapper">
                     <div>
-                        <h3>Free Plan</h3>
+                        <h3>Developer Plan</h3>
                         <h4>Rp800,000,-</h4>
                         <p>package set</p>
                     </div>
@@ -462,11 +462,11 @@
                             <div class="wrapper-1">
                                 <div class="input">
                                     <label for="name">Nama Anda :</label>
-                                    <input type="text" id="name" placeholder="Nama Anda" autocomplete="username" required>
+                                    <input type="text" id="name" autocomplete="username" required>
                                 </div>
                                 <div class="input">
                                     <label for="e-mail">E-Mail Anda :</label>
-                                    <input type="email" id="e-mail" placeholder="emailanda@gamil.com" autocomplete="email" required>
+                                    <input type="email" id="e-mail" autocomplete="email" required>
                                 </div>
                             </div>
 
