move span oustide p in Pertanyaan Section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Zenita Beauty</title>
 </head>
 
@@ -15,7 +15,7 @@
         <nav class="navbar">
             <!-- Logo and title -->
             <div class="logo">
-                <img src="/assets/image/Logo.svg" alt="Logo Zenita Beauty">
+                <img src="assets/image/Logo.svg" alt="Logo Zenita Beauty">
                 <div class="logo-title">
                     <p class="logo-title-1">ZENITA</p>
                     <p class="logo-title-2">BEAUTY</p>
@@ -60,23 +60,23 @@
                     <div class="header-btn">
                         <button>Join Sekarang</button>
                         <div class="btn-play-video">
-                            <img src="/assets/icon/Play-icon.svg" alt="Play Icon">
+                            <img src="assets/icon/Play-icon.svg" alt="Play Icon">
                             <button>Tonton Video</button>
                         </div>
                     </div>
                 </div>
                 <div class="header-wrapper-right">
-                    <img src="/assets/image/hero-img-header.svg" alt="Office picture">
+                    <img src="assets/image/hero-img-header.svg" alt="Office picture">
                 </div>
             </div>
         </section>
 
         <!-- Certification Content -->
         <section class="certification">
-            <img src="/assets/image/ap2li.svg" alt="APLI Certification">
-            <img src="/assets/image/apli.svg" alt="AP2LI Certification">
-            <img src="/assets/image/BEST.svg" alt="100% Best">
-            <img src="/assets/image/bpom.svg" alt="BPOM Certification">
+            <img src="assets/image/ap2li.svg" alt="APLI Certification">
+            <img src="assets/image/apli.svg" alt="AP2LI Certification">
+            <img src="assets/image/BEST.svg" alt="100% Best">
+            <img src="assets/image/bpom.svg" alt="BPOM Certification">
         </section>
 
         <!-- Tentang Kami -->
@@ -126,14 +126,14 @@
                             <p class="business-text"><span
                                     style="color: #47B2E4; padding-left: 10px; padding-right: 10px;">01</span> Visi
                                 Perusahaan Kami</p>
-                            <img src="/assets/icon/chevron-down-icon.svg" alt="Icon chevron down">
+                            <img src="assets/icon/chevron-down-icon.svg" alt="Icon chevron down">
                         </div>
 
                         <div class="text-business-wrapper">
                             <p class="business-text"><span
                                     style="color: #47B2E4; padding-left: 10px; padding-right: 10px;">02</span> Misi
                                 Perusahaan Kami</p>
-                            <img src="/assets/icon/chevron-down-icon.svg" alt="Icon chevron down">
+                            <img src="assets/icon/chevron-down-icon.svg" alt="Icon chevron down">
                         </div>
 
                         <div class="text-business-wrapper">
@@ -141,37 +141,37 @@
                                     style="color: #47B2E4; padding-left: 10px; padding-right: 10px;">03</span> Kenapa
                                 Harus Memilih Perusahaan
                                 Kami</p>
-                            <img src="/assets/icon/chevron-down-icon.svg" alt="Icon chevron down">
+                            <img src="assets/icon/chevron-down-icon.svg" alt="Icon chevron down">
                         </div>
                     </div>
                 </div>
 
                 <div class="business-wrapper-right">
-                    <img src="/assets/image/image-hero-business.svg" alt="Business Picture">
+                    <img src="assets/image/image-hero-business.svg" alt="Business Picture">
                 </div>
             </div>
 
             <div class="business-wrapper-card">
                 <div class="card-business">
-                    <img src="/assets/icon/shop-icon.svg" alt="Shop icon">
+                    <img src="assets/icon/shop-icon.svg" alt="Shop icon">
                     <h3>Modern Bisnis</h3>
                     <p>Memperkenalkan serta mengedukasi apa itu bisnis era digital</p>
                 </div>
 
                 <div class="card-business">
-                    <img src="/assets/icon/lab-icon.svg" alt="Lab icon">
+                    <img src="assets/icon/lab-icon.svg" alt="Lab icon">
                     <h3>Uji Lab</h3>
                     <p>Produk yang sudah diuji kualitasnya melalui teknologi canggih labolatorium</p>
                 </div>
 
                 <div class="card-business">
-                    <img src="/assets/icon/cloud-icon.svg" alt="Cloud icon">
+                    <img src="assets/icon/cloud-icon.svg" alt="Cloud icon">
                     <h3>Trend Produk</h3>
                     <p>Dengan banyaknya permintaan pasar dan hasil riset sehingga mudah untuk dijual</p>
                 </div>
 
                 <div class="card-business">
-                    <img src="/assets/icon/shield-icon.svg" alt="Shield icon">
+                    <img src="assets/icon/shield-icon.svg" alt="Shield icon">
                     <h3>Keamanan Sistem</h3>
                     <p>Data yang ada dalam sistem akan secara otomatis terenkripsi sehingga tidak akan ada kebocoran
                         data</p>
@@ -198,25 +198,25 @@
             <!-- Grid Photo Produk Kami -->
             <div class="grid-container">
                 <div class="grid-item" id="photo1">
-                    <img src="/assets/image/lipbalm-3.svg" alt="3 Lipbalm">
+                    <img src="assets/image/lipbalm-3.svg" alt="3 Lipbalm">
                 </div>
                 <div class="grid-item" id="photo2">
-                    <img src="/assets/image/lipbalm-coklat.svg" alt="Chocolate lipbalm">
+                    <img src="assets/image/lipbalm-coklat.svg" alt="Chocolate lipbalm">
                 </div>
                 <div class="grid-item" id="photo3">
-                    <img src="/assets/image/lipgloss.svg" alt="2 Lipgloss">
+                    <img src="assets/image/lipgloss.svg" alt="2 Lipgloss">
                 </div>
                 <div class="grid-item" id="photo4">
-                    <img src="/assets/image/lipbalm-syo.svg" alt="Lipbalm SYO">
+                    <img src="assets/image/lipbalm-syo.svg" alt="Lipbalm SYO">
                 </div>
                 <div class="grid-item" id="photo5">
-                    <img src="/assets/image/lipgloss-red.svg" alt="Red Lipgloss">
+                    <img src="assets/image/lipgloss-red.svg" alt="Red Lipgloss">
                 </div>
                 <div class="grid-item" id="photo6">
-                    <img src="/assets/image/lipstick-set.svg" alt="Lipstick Set">
+                    <img src="assets/image/lipstick-set.svg" alt="Lipstick Set">
                 </div>
                 <div class="grid-item" id="photo7">
-                    <img src="/assets/image/lipbalm-organics.svg" alt="Organics Lipbalm">
+                    <img src="assets/image/lipbalm-organics.svg" alt="Organics Lipbalm">
                 </div>
             </div>
         </section>
@@ -236,7 +236,7 @@
             <div class="card-pb-container">
                 <div class="card-pb-wrapper">
                     <div>
-                        <img src="/assets/image/Bubble-chat.svg" alt="Bubble Chat ilustatrion image">
+                        <img src="assets/image/Bubble-chat.svg" alt="Bubble Chat ilustatrion image">
                     </div>
                     <div>
                         <h3>Manage jam kerja anda</h3>
@@ -247,7 +247,7 @@
                 </div>
                 <div class="card-pb-wrapper">
                     <div>
-                        <img src="/assets/image/Phone.svg" alt="Phone ilustatrion image">
+                        <img src="assets/image/Phone.svg" alt="Phone ilustatrion image">
                     </div>
                     <div>
                         <h3>Produk yang berkualitas</h3>
@@ -258,7 +258,7 @@
                 </div>
                 <div class="card-pb-wrapper">
                     <div>
-                        <img src="/assets/image/Meeting.svg" alt="Meeting ilustatrion image">
+                        <img src="assets/image/Meeting.svg" alt="Meeting ilustatrion image">
                     </div>
                     <div>
                         <h3>Mentoring Bisnis</h3>
@@ -270,7 +270,7 @@
                 </div>
                 <div class="card-pb-wrapper">
                     <div>
-                        <img src="/assets/image/Product.svg" alt="Prodcut ilustatrion image">
+                        <img src="assets/image/Product.svg" alt="Prodcut ilustatrion image">
                     </div>
                     <div>
                         <h3>Tools promosi lengkap</h3>
@@ -283,7 +283,7 @@
 
             <div class="below-card-wrapper">
                 <div>
-                    <img src="/assets/image/Achievement.svg" alt="Achievement ilustration image">
+                    <img src="assets/image/Achievement.svg" alt="Achievement ilustration image">
                 </div>
                 <div>
                     <h3>Sukses karena berbisnis</h3>
@@ -298,7 +298,7 @@
         </section>
 
         <!-- Paket Join Section -->
-        <section>
+        <section class="paket-join-section">
             <div class="title-content">
                 <h2>PAKET JOIN</h2>
             </div>
@@ -375,41 +375,60 @@
 
             <div class="box-question-container">
                 <div class="box-question">
-                    <p><span style="margin-right: 10px; vertical-align: middle;"><img
-                                src="/assets/icon/question-circle-icon.svg" alt="circle question symbol"></span>Apakah
-                        itu
-                        tidak akan diikuti oleh was for tapi tempat tidur guci dua?</p>
-                    <img src="/assets/icon/chevron-down-icon.svg" alt="Chevron down icon">
+                    <div class="box-text-wrapper">
+                        <span style="margin-right: 10px; vertical-align: middle;"><img
+                                src="assets/icon/question-circle-icon.svg" alt="circle question symbol"></span>
+                        <p>Apakah
+                            itu
+                            tidak akan diikuti oleh was for tapi tempat tidur guci dua?</p>
+                    </div>
+                    <img src="assets/icon/chevron-down-icon.svg" alt="Chevron down icon">
                 </div>
+
                 <div class="box-question">
-                    <p><span style="margin-right: 10px; vertical-align: middle;"><img
-                                src="/assets/icon/question-circle-icon.svg" alt="circle question symbol"></span>Apakah
-                        cokelat penyakit yang paling populer saat ini?</p>
-                    <img src="/assets/icon/chevron-down-icon.svg" alt="Chevron down icon">
+                    <div class="box-text-wrapper">
+                        <span style="margin-right: 10px; vertical-align: middle;"><img
+                                src="assets/icon/question-circle-icon.svg" alt="circle question symbol"></span>
+                        <p>Apakah
+                            cokelat penyakit yang paling populer saat ini?</p>
+                    </div>
+                    <img src="assets/icon/chevron-down-icon.svg" alt="Chevron down icon">
                 </div>
+
                 <div class="box-question">
-                    <p><span style="margin-right: 10px; vertical-align: middle;"><img
-                                src="/assets/icon/question-circle-icon.svg" alt="circle question symbol"></span>Apakah
-                        itu sakit di pantat?</p>
-                    <img src="/assets/icon/chevron-down-icon.svg" alt="Chevron down icon">
+                    <div class="box-text-wrapper">
+                        <span style="margin-right: 10px; vertical-align: middle;"><img
+                                src="assets/icon/question-circle-icon.svg" alt="circle question symbol"></span>
+                        <p>Apakah
+                            itu sakit di pantat?</p>
+                    </div>
+                    <img src="assets/icon/chevron-down-icon.svg" alt="Chevron down icon">
                 </div>
+
                 <div class="box-question">
-                    <p><span style="margin-right: 10px; vertical-align: middle;"><img
-                                src="/assets/icon/question-circle-icon.svg" alt="circle question symbol"></span>Saatnya
-                        anak-anak makan salad dan salad?</p>
-                    <img src="/assets/icon/chevron-down-icon.svg" alt="Chevron down icon">
+                    <div class="box-text-wrapper">
+                        <span style="margin-right: 10px; vertical-align: middle;"><img
+                                src="assets/icon/question-circle-icon.svg" alt="circle question symbol"></span>
+                        <p>Saatnya
+                            anak-anak makan salad dan salad?</p>
+                    </div>
+                    <img src="assets/icon/chevron-down-icon.svg" alt="Chevron down icon">
                 </div>
+
                 <div class="box-question">
-                    <p><span style="margin-right: 10px; vertical-align: middle;"><img
-                                src="/assets/icon/question-circle-icon.svg" alt="circle question symbol"></span>Mahkota
-                        kehidupan murni menghiasi langit-langit mulut?</p>
-                    <img src="/assets/icon/chevron-down-icon.svg" alt="Chevron down icon">
+                    <div class="box-text-wrapper">
+                        <span style="margin-right: 10px; vertical-align: middle;"><img
+                                src="assets/icon/question-circle-icon.svg" alt="circle question symbol"></span>
+                        <p>Mahkota
+                            kehidupan murni menghiasi langit-langit mulut?</p>
+                    </div>
+                    <img src="assets/icon/chevron-down-icon.svg" alt="Chevron down icon">
                 </div>
             </div>
         </section>
 
         <!-- KONTAK SECTION -->
-        <section>
+        <section class="kontak">
             <div class="title-content">
                 <h2>KONTAK</h2>
             </div>
@@ -424,7 +443,7 @@
                 <div class="contact-container-left">
                     <div class="contact-wrapper-left">
                         <div>
-                            <img src="/assets/icon/Location-icon.svg" alt="Location icon">
+                            <img src="assets/icon/Location-icon.svg" alt="Location icon">
                         </div>
                         <div class="text-contact-wrapper">
                             <h3>Lokasi :</h3>
@@ -434,7 +453,7 @@
                     </div>
                     <div class="contact-wrapper-left">
                         <div>
-                            <img src="/assets/icon/email-icon.svg" alt="Email icon">
+                            <img src="assets/icon/email-icon.svg" alt="Email icon">
                         </div>
                         <div class="text-contact-wrapper">
                             <h3>E-Mail :</h3>
@@ -443,7 +462,7 @@
                     </div>
                     <div class="contact-wrapper-left">
                         <div>
-                            <img src="/assets/icon/phone-icon.svg" alt="Phone icon">
+                            <img src="assets/icon/phone-icon.svg" alt="Phone icon">
                         </div>
                         <div class="text-contact-wrapper">
                             <h3>Telepon :</h3>
@@ -452,7 +471,7 @@
                     </div>
 
                     <div class="map">
-                        <img src="/assets/image/Map.svg" alt="Map image">
+                        <img src="assets/image/Map.svg" alt="Map image">
                     </div>
                 </div>
 
@@ -505,7 +524,7 @@
         <div class="footer-container">
             <div class="footer-wrapper-1">
                 <div class="logo-2">
-                    <img src="/assets/image/Logo-2.svg" alt="Logo Zenita Beauty">
+                    <img src="assets/image/Logo-2.svg" alt="Logo Zenita Beauty">
                     <div class="logo-title-footer">
                         <p class="logo-title-1-footer">ZENITA</p>
                         <p class="logo-title-2-footer">BEAUTY</p>
@@ -538,11 +557,11 @@
             <div class="footer-wrapper-3">
                 <h4>Jejaring Sosial Kami</h4>
                 <div class="social-group">
-                    <img src="/assets/icon/Twitter-icon.svg" alt="Twitter icon">
-                    <img src="/assets/icon/Instagram-icon.svg" alt="Instagram icon">
-                    <img src="/assets/icon/Facebook-icon.svg" alt="Facebook icon">
-                    <img src="/assets/icon/Skype-icon.svg" alt="Skype icon">
-                    <img src="/assets/icon/LinkedIn-icon.svg" alt="LinkedIn icon">
+                    <img src="assets/icon/Twitter-icon.svg" alt="Twitter icon">
+                    <img src="assets/icon/Instagram-icon.svg" alt="Instagram icon">
+                    <img src="assets/icon/Facebook-icon.svg" alt="Facebook icon">
+                    <img src="assets/icon/Skype-icon.svg" alt="Skype icon">
+                    <img src="assets/icon/LinkedIn-icon.svg" alt="LinkedIn icon">
                 </div>
             </div>
         </div>
@@ -554,7 +573,7 @@
         </div>
     </footer>
 
-    <script src="/JS/script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 
 </html>
