add some class on section

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         </section>
 
         <!-- Produk Kami Section -->
-        <section>
+        <section class="produk-kami">
             <div class="title-content">
                 <h2>PRODUK KAMI</h2>
             </div>
