add class for function hamburger menu

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <!-- Navbar Menu -->
             <div class="right-navbar">
                 <div>
-                    <ul class="navbar-menu">
-                        <li onclick="refreshWeb()">Beranda</li>
-                        <li onclick="linkEmail()">Tentang kami</li>
-                        <li onclick="sectionProduk()">Produk</li>
-                        <li onclick="sectionBisnis()">Peluang Bisnis</li>
+                    <ul class="navbar-menu nav-menu">
+                        <li onclick="refreshWeb()" class="nav-item">Beranda</li>
+                        <li onclick="linkEmail()" class="nav-item">Tentang kami</li>
+                        <li onclick="sectionProduk()" class="nav-item">Produk</li>
+                        <li onclick="sectionBisnis()" class="nav-item">Peluang Bisnis</li>
                     </ul>
                 </div>
                 <div class="btn-join">
