refactor: change zenita/ZENITA to yunda/YUNDA

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
-    <title>Zenita Beauty</title>
+    <title>Yunda Beauty</title>
 </head>
 
 <body>
@@ -15,9 +15,9 @@
         <nav class="navbar">
             <!-- Logo and title -->
             <div class="logo">
-                <img src="assets/image/Logo.svg" alt="Logo Zenita Beauty">
+                <img src="assets/image/Logo.svg" alt="Logo Yunda Beauty">
                 <div class="logo-title">
-                    <p class="logo-title-1">ZENITA</p>
+                    <p class="logo-title-1">YUNDA</p>
                     <p class="logo-title-2">BEAUTY</p>
                 </div>
             </div>
@@ -227,7 +227,7 @@
                 <h2>PELUANG BISNIS</h2>
             </div>
             <div class="text-content">
-                <p>Kami membuka suatu peluang bisnis untuk pelanggan kami dengan fleksibel dari PT. Zenita Beauty Skin.
+                <p>Kami membuka suatu peluang bisnis untuk pelanggan kami dengan fleksibel dari PT. Yunda Beauty Skin.
                     Bergabung dan buatlah suatu jaringan bisnis yang menyenangkan dengan berbagai macam paket plan yang
                     profitable.</p>
             </div>
@@ -287,7 +287,7 @@
                 </div>
                 <div>
                     <h3>Sukses karena berbisnis</h3>
-                    <p>PT. Zenita Beauty Skin bukan sekedar bisnis biasa pada umumnya. Dengan produk yang kami
+                    <p>PT. Yunda Beauty Skin bukan sekedar bisnis biasa pada umumnya. Dengan produk yang kami
                         ciptakan
                         anda dapat mencapai impian anda menjadi sukses dan meningkatkan kesadaran hidup sehat dan
                         sejahtera. Buatlah suatu perubahan dala hidup anda mulai sekarang dan ajak orang-orang
@@ -457,7 +457,7 @@
                         </div>
                         <div class="text-contact-wrapper">
                             <h3>E-Mail :</h3>
-                            <p>Zenitaskin.id@gmail.com</p>
+                            <p>Yundabeauty@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-wrapper-left">
@@ -524,9 +524,9 @@
         <div class="footer-container">
             <div class="footer-wrapper-1">
                 <div class="logo-2">
-                    <img src="assets/image/Logo-2.svg" alt="Logo Zenita Beauty">
+                    <img src="assets/image/Logo-2.svg" alt="Logo Yunda Beauty">
                     <div class="logo-title-footer">
-                        <p class="logo-title-1-footer">ZENITA</p>
+                        <p class="logo-title-1-footer">YUNDA</p>
                         <p class="logo-title-2-footer">BEAUTY</p>
                     </div>
                 </div>
@@ -537,7 +537,7 @@
                 </div>
                 <div>
                     <p><span style="color: #37517e; font-weight: bold;">Phone : </span>+62 7777 8888 9999</p>
-                    <p><span style="color: #37517e; font-weight: bold;">E-Mail : </span>Zenitaskin@gmail.com</p>
+                    <p><span style="color: #37517e; font-weight: bold;">E-Mail : </span>Yundabeauty@gmail.com</p>
                 </div>
             </div>
 
@@ -568,7 +568,7 @@
 
         <!-- Box Footer -->
         <div class="box-footer">
-            <p>&copy;Copyright <span style="font-weight: bold;">Zenita Beauty.</span> All Right Reserved</p>
+            <p>&copy;Copyright <span style="font-weight: bold;">Yunda Beauty.</span> All Right Reserved</p>
             <p>Redesign By <span style="color: #47B2E4;">Gusti Treshana Herman</span></p>
         </div>
     </footer>
